# mini_social_network

./: README.md
api/: README.md  docker-compose.yaml
api/backend/: pyproject.toml
api/backend/app/: config.py
api/backend/app/core/: crud.py  dependencies.py
api/backend/app/endpoints/: api.py  auth.py  posts.py  reactions.py
api/backend/app/models/: db_models.py  models.py
api/backend/app/schemas/: request_schemas.py  response_schemas.py
api/backend/app/utils/: token.py
backend/: pyproject.toml
backend/app/: config.py
backend/app/core/: crud.py
backend/app/endpoints/: api.py
backend/app/models/: db_models.py
encode_link/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
test_logging/: README.md
test_logging/app/: main.py
test_logging/app/tests/: test.py
unittests/: main.py  pyproject.toml
